OPTION(BUILD_BULLET_PLUGIN "Build Bullet Plugin")
if (BUILD_BULLET_PLUGIN)
	add_subdirectory(Bullet)
endif()

OPTION(BUILD_CIGI_COMPONENT_PLUGIN "Build CIGI Component Plugin")
if (BUILD_CIGI_COMPONENT_PLUGIN)
	add_subdirectory(CigiComponent)
	add_subdirectory(CigiComponentTests)
	add_subdirectory(CigiTestHost)
endif()

OPTION(BUILD_FFT_OCEAN_PLUGIN "Build FFT Ocean Plugin")
if (BUILD_FFT_OCEAN_PLUGIN)
	add_subdirectory(FftOcean)
	add_subdirectory(FftOceanTests)
endif()

OPTION(BUILD_JSBSIM_PLUGIN "Build JSBSim Component Plugin")
if (BUILD_JSBSIM_PLUGIN)
	add_subdirectory(JsbSim)
endif()

OPTION(BUILD_PYTHON_COMPONENT_PLUGIN "Build Python Component Plugin")
if (BUILD_PYTHON_COMPONENT_PLUGIN)
	add_subdirectory(PythonComponent)
endif()
