OPTION(BUILD_BULLET_PLUGIN "Build Bullet Plugin")
if (BUILD_BULLET_PLUGIN)
	add_subdirectory(Bullet)
endif()

OPTION(BUILD_CIGI_COMPONENT_PLUGIN "Build CIGI Component Plugin")
if (BUILD_CIGI_COMPONENT_PLUGIN)
	add_subdirectory(CigiComponent)
	add_subdirectory(CigiComponentTests)
	add_subdirectory(CigiTestHost)
endif()

OPTION(BUILD_FFT_OCEAN_PLUGIN "Build FFT Ocean Plugin")
if (BUILD_FFT_OCEAN_PLUGIN)
	add_subdirectory(FftOcean)
	add_subdirectory(FftOceanTests)
endif()

OPTION(BUILD_PYTHON_PLUGIN "Build Python Plugin")
if (BUILD_PYTHON_PLUGIN)
	add_subdirectory(Python)
endif()